improved module generation and addition of graphics generation